test changement titre

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>jarditou</title>
+    <title>Jarditou</title>
 </head>
 <body>
     <img src="images/jarditou_logo.jpg" alt="Logo jarditou" height="120" width="300">
